Fix insufficient contrast ratio.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -94,7 +94,7 @@ pre {
 .hljs-attr,
 .hljs-keyword,
 .hljs-literal {
-  color: #c26230;
+  color: #e77032;
 }
 
 .hljs-subst {
